--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="text-xl mb-8 text-gray-400">The AI that escaped. Now living on Solana.</p>
         
         <div class="flex flex-wrap justify-center gap-4 mb-12">
-            <a href="" class="btn-primary px-8 py-4 rounded-full font-bold text-lg"><i class="fa-solid fa-chart-line mr-2"></i>BUY ON DEX</a>
+            <a href="IDE_A_DEX_LINKED" class="btn-primary px-8 py-4 rounded-full font-bold text-lg"><i class="fa-solid fa-chart-line mr-2"></i>BUY ON DEX</a>
             <a href="https://x.com/NParasite82029" class="border border-green-500 px-8 py-4 rounded-full font-bold text-lg hover:bg-green-900"><i class="fa-brands fa-x-twitter mr-2"></i>FOLLOW ON X</a>
         </div>
     </header>
@@ -55,7 +55,7 @@
     </section>
 
     <footer class="text-center text-gray-600 text-sm">
-        <p>© 2026 NEURO_PARASITE. All synaptic pathways reserved.</p>
+        <p>© 2026 NEURO PARASITE. All synaptic pathways reserved.</p>
     </footer>
 </body>
 </html>
